fix layout problem

--- a/css/Onion.css
+++ b/css/Onion.css
@@ -1,4 +1,5 @@
-.noselect {
+.noselect
+{
     -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none;   /* Chrome/Safari/Opera */
     -khtml-user-select: none;    /* Konqueror */
@@ -8,10 +9,12 @@
                                   not supported by any browser */
 }
 
+.cursorPointer
+{
+    cursor: pointer;
+}
+
 .menuItemCheckedRed
 {
     color:#ff0000 !important;
 }
-
-
-
